<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A468E"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:src="@drawable/meditation_logo" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/box_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/abcdefg"
        android:padding="15dp"
        android:background="@drawable/button_background"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/box_username"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/box_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/saosao"
        android:padding="15dp"
        android:background="@drawable/button_background"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:layout_below="@id/box_password"
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password"
        android:fontFamily="@font/inter_regular"
        android:textSize="12sp"
        android:textColor="#FFFFFF" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/forgot_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/loginbox"
        android:text="@string/login"
        android:fontFamily="@font/mn_reg"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:paddingTop="-5dp"
        />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="12sp"
        android:textColor="#FFFFFF" />

</RelativeLayout>