<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A468E"
    tools:context=".LogIn">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:src="@drawable/meditation_logo" />
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/box_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/saosao"
        android:padding="15dp"
        android:background="@drawable/button_background"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/box_password"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/repassword"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/repass_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/repass"
        android:padding="15dp"
        android:background="@drawable/button_background"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:textSize="12sp"/>
         />
    <Button
        android:id="@+id/next_button"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/repass_box"
        android:layout_marginTop="220dp"
        android:background="@drawable/button_background"
        android:text="@string/next"
        android:fontFamily="@font/mn_reg"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:paddingTop="-5dp"
        />
</RelativeLayout>